# INVAXION-Unlocker

./: README.md  Unlock-Character.py  Unlock-Theme.py  build.ps1  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
lang/: en.json  zh-TW.json  zh-cn.json
official/: Unlock-Character.py  Unlock-Theme.py
src/: lang.py  main.py
